[package]
name = "sshmount"
version = "0.1.1"
edition = "2021"
authors = ["mito"]
description = "Mount the directory to which the ssh connection is made."
license = "Apache-2.0"
keywords = ["utility", "filesystem", "linux", "ssh", "sftp"]
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/mitoneko/sshmount.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.0.32", features = ["derive"] }
dialoguer = "0.10.3"
dns-lookup = "1.0.8"
env_logger = "0.10.0"
fuser = "0.12.0"
home = "0.5.4"
libc = "0.2.139"
log = "0.4.17"
ssh2 = "0.9.3"
ssh2-config = "0.1.3"
thiserror = "1.0.38"
users = "0.11.0"

[profile.release]
#debug = true
